Fix social icons vertical alignment on mobile
- Change .author__urls_sm to use flexbox with align-items: center
- Remove margin-bottom and set line-height: 1 to eliminate extra spacing
- Add inline-flex to anchor elements for proper icon alignment

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -256,11 +256,15 @@
 .author__urls_sm{
   padding: .25em;
   font-size: 1.75em;
-  display: block;
-  margin-bottom: 1em;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0;
+  line-height: 1;
   a {
     color: inherit;
     text-decoration: none;
+    display: inline-flex;
+    align-items: center;
     &:hover {
       text-decoration: none;
     }
